--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,17 +34,9 @@
   <ul class="navigation">
 
 
-  <!-- Twitter -->
-  <li class="social-item twitter">
-    <a href="http://twitter.com/{{ site.twitter }}" title="{{ site.twitter }} on Twitter" target="_blank">
-      <i class='icon fi-social-twitter'></i>
-      <span class="label">Twitter</span>
-    </a>
-  </li>
-
   <!-- Google+ -->
   <li class="social-item gplus">
-    <a href="http://plus.google.com/103829716466878605055?rel=author" title="+ChrisBanes" target="_blank">
+    <a href="http://plus.google.com/106422440006928253332" title="Cangol -Google+" target="_blank">
       <i class='icon fi-social-google-plus'></i>
       <span class="label">Google+</span>
     </a>
@@ -52,7 +44,7 @@
 
   <!-- GitHub -->
   <li class="social-item github">
-    <a href="http://github.com/chrisbanes" title="@chrisbanes on GitHub" target="_blank">
+    <a href="http://github.com/Cangol" title="@Cangol on GitHub" target="_blank">
       <i class='icon fi-social-github'></i>
       <span class="label">GitHub</span>
     </a>
@@ -60,27 +52,12 @@
   
   <!-- StackOverflow -->
   <li class="social-item stackoverflow">
-    <a href="http://stackoverflow.com/users/474997/chris-banes" title="Chris Banes on StackOverflow" target="_blank">
+    <a href="http://stackoverflow.com/users/534737/user534737" title="Cangol on StackOverflow" target="_blank">
       <i class='icon fi-social-stack-overflow'></i>
       <span class="label">StackOverflow</span>
     </a>
   </li>
 
-  <!-- Foursquare -->
-  <li class="social-item foursquare">
-    <a href="http://foursquare.com/chrisbanes" title="Chris Banes on foursquare" target="_blank">
-      <i class='icon fi-social-foursquare'></i>
-      <span class="label">foursquare</span>
-    </a>
-  </li>
-
-    <!-- LinkedIn -->
-    <li class="social-item linkedin">
-      <a href="http://uk.linkedin.com/in/chrisbanes/" title="Chris Banes on LinkedIn" target="_blank">
-        <i class='icon fi-social-linkedin'></i>
-        <span class="label">LinkedIn</span>
-      </a>
-    </li>
 
   </ul>
 </nav>
