--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,7 +36,7 @@
 
   <!-- Google+ -->
   <li class="social-item gplus">
-    <a href="http://plus.google.com/106422440006928253332" title="Cangol -Google+" target="_blank">
+    <a href="https://plus.google.com/106422440006928253332" title="Cangol -Google+" target="_blank">
       <i class='icon fi-social-google-plus'></i>
       <span class="label">Google+</span>
     </a>
@@ -44,7 +44,7 @@
 
   <!-- GitHub -->
   <li class="social-item github">
-    <a href="http://github.com/Cangol" title="@Cangol on GitHub" target="_blank">
+    <a href="https://github.com/Cangol" title="@Cangol on GitHub" target="_blank">
       <i class='icon fi-social-github'></i>
       <span class="label">GitHub</span>
     </a>
@@ -52,7 +52,7 @@
   
   <!-- StackOverflow -->
   <li class="social-item stackoverflow">
-    <a href="http://stackoverflow.com/users/534737/user534737" title="Cangol on StackOverflow" target="_blank">
+    <a href="https://stackoverflow.com/users/534737/user534737" title="Cangol on StackOverflow" target="_blank">
       <i class='icon fi-social-stack-overflow'></i>
       <span class="label">StackOverflow</span>
     </a>
