--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<script data-ad-client="ca-pub-7255589721519601" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   {% include head.html %}
 
   <body>
